Added logout button to navbar.

--- a/views/partials/backbone_templates.ejs
+++ b/views/partials/backbone_templates.ejs
@@ -5,6 +5,11 @@
     <li><a href='#' class='index'>All Links</a></li>
     <li><a href='#' class='create'>Shorten</a></li>
   </ul>
+  <form action="/logout" method="get">
+      <div>
+        <input type="submit" value="Logout">
+      </div>
+  </form>
   </div>
   <div id='container'></div>
 </script>
