Advanced: added styling with bootstrap.  changed "create an account" and "Login to your account" simple links into styled buttons.  Renamed app to "Shrt.ly" and added a jumbotron banner to layout.  Styled logout button in navbar.

--- a/views/partials/backbone_templates.ejs
+++ b/views/partials/backbone_templates.ejs
@@ -7,7 +7,7 @@
   </ul>
   <form action="/logout" method="get">
       <div>
-        <input type="submit" value="Logout">
+        <button type="submit" class="btn btn-danger">Logout</button>
       </div>
   </form>
   </div>
