--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,19 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Shortly</title>
+    <div class = 'jumbotron'>
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4"><h1>Shrt.ly</h1></div>
+        <div class="col-md-4"></div>
+      </div>
+    </div>
+
+    <!-- Include bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="/style.css">
 
     <script src="/lib/jquery.js"></script>
     <script src="/lib/underscore.js"></script>
+
+    <!-- Include full bootstrap JS -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
     <script src="/lib/backbone.js"></script>
     <script src="/lib/handlebars.js"></script>
 
   </head>
 
   <body>
-    <h1>Shortly</h1>
     <%- body %>
   </body>
 </html>
