--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,9 +9,12 @@
       <input id="password" type="password" name="password">
     </div>
     <div>
-      <input type="submit" value="Sign up">
+      <button type="submit" class="btn btn-primary">Sign Up</button>
     </div>
 </form>
-<p>
-  <a href="/login">Login to your account &rarr;</a>
-<p>
+
+<form action="/login" method="get">
+    <div>
+      <button type="submit" class="btn btn-default">Log in</button>
+    </div>
+</form>
